public class User {


    private void userMenu() {
        return userMenu;
    }

    private void showTable() {
        return table;
    }

    private void viewTeams() {
        return teams;
    }

    private void viewMatchProgramme() {
        return matchProgramme;
    }
}
