@startuml
'https://plantuml.com/class-diagram
class Main
 {
 }
class Team {

int teamID

String teamName

int point
int gamesPlayed
int goalsScored
int goalConceded
int goalDifference

ArrayList<Integer> playerIDs

ArrayList<Integer> matchIDs

}

class Player {

int playerID

String name
String schoolClass
String mail
String phoneNumber

}
class KnockoutPhase {
ArrayList<Integer>  TeamIDs
ArrayList<Integer> matchIDs

}

class Group {
ArrayList<Integer> TeamIDs
ArrayList<Integer> matchIDs

}
class Table {

Group group1
Group group2
Group group3
Group group4

viewTable()
}

class Match{

int matchID

int team1Goals
int team2Goals

Team team1
Team team2

DateTime date
}

class TournamentOrganizer {
updateResult()
setTournamentRules()

viewMatchProgramme()
viewTable()
viewTeams()

addTeam()
addMatch()
addMatchToGroup()
addMatchToKnockoutPhase()

randomizeGroups()
addTeamToGroup()

}
class Tournament {
static ArrayList<Match> matches
static ArrayList<Player> players
static ArrayList<Team> teams

Table table
KnockoutPhase knockoutPhase

}
class User {
viewTable()
viewTeams()
viewMatchProgramme()
}

Player *-- Team
Group --* Match
Group --* Team
KnockoutPhase --* Match
KnockoutPhase --*Team
Table --* Group
Main --* TournamentOrganizer
Main --* Tournament
Main --* User

'Tournament --* Team
Tournament --* KnockoutPhase
'Tournament --* Match
Tournament --* Table
Tournament --* Player
@enduml